2013-08-27  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Parser.pm: add \r to regexps to exclude it when 
	excluding newlines.  Report from Karl.

2013-08-26  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_bibtex): only run biber if
	</bcf:controlfile> is present in the bcf file.
	Allow override with BIBER envvar.
	Report from Jozef Vesely, 26 Aug 2013 14:26:26.

2013-08-26  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Plaintext.pm (_align_lines): correct byte count
	in flushleft and center.

2013-08-24  Karl Berry  <karl@gnu.org>  (tiny change)

	* util/texi2dvi (run_bibtex): run biber if .bcf file exists.
	(xref_files_changed): check for biblatex rerun warning.
	Report from Jozef Vesely, 24 Aug 2013 12:15:40.

2013-08-24  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/Info.pm (output), 
	tp/Texinfo/Convert/Plaintext.pm: collect text before first node
	and output the same header for every Info output files using that
	text.  Based on a report from Juri Linkov and analysis of Sergey.
	Thread started at
	http://lists.gnu.org/archive/html/bug-gnu-emacs/2013-04/msg00039.html

2013-08-22  Karl Berry  <karl@gnu.org>

	* info/*: update copyright notices.

	* info/infomap.c (default_{emacs,vi}_like_info_keys),
	* info/session.c (info_display_file_info): rename from
	info_display_file.
	* NEWS: mention display-file-info.
	* doc/info-stnd.texi (Invoking Info): mention new debugging level,
	more about -f.
	(Miscellaneous Commands): document =.
	* info/info.c (info_short_help): mention -1 for all debugging.

2013-08-20  Sergey Poznyakoff  <gray@gnu.org>

	* info/info.h (add_pointer_to_array): Use x2nrealloc.
	Remove sixth argument.  All uses updated.
	(maybe_free): Remove.  Use free() instead.  All uses
	updated.

2013-08-20  Karl Berry  <karl@gnu.org>

	* configure.ac (AM_INIT_AUTOMAKE): require 1.14 for info-in-builddir.
	Noted by Patrice.

	* doc/texinfo.tex (\sectionheading): must do
	\global\let\prevsectiondefs, since we're inside a group.